kubernetes/apps/kube-system/cilium/manifests/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas-9iu.pages.dev/gateway.networking.k8s.io/httproute_v1beta1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble-ui
spec:
  hostnames:
    - hubble-ui.darkfellanetwork.com
  parentRefs:
    - name: internal
      namespace: envoy-gateway-system
      sectionName: https
  rules:
    - backendRefs:
        - name: hubble-ui
          namespace: kube-system
          port: 80
