kubernetes/apps/kube-system/cilium/manifests/securitypolicy.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas-9iu.pages.dev/gateway.envoyproxy.io/securitypolicy_v1alpha1.json
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: hubble-ui-oidc
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: hubble-ui
  oidc:
    provider:
      issuer: https://accounts.darkfellanetwork.com/realms/DarkfellaNET
    clientID: 85cd33f8-78af-4993-97cf-d595dafe8118
    clientSecret:
      name: hubble-ui-oidc-secret
    redirectURL: https://hubble-ui.darkfellanetwork.com/oauth2/callback
    logoutPath: /logout
    cookieNames:
      accessToken: hubble-ui-access-token
      idToken: hubble-ui-id-token
  jwt:
    providers:
      - name: keycloak
        issuer: https://accounts.darkfellanetwork.com/realms/DarkfellaNET
        remoteJWKS:
          uri: https://accounts.darkfellanetwork.com/realms/DarkfellaNET/protocol/openid-connect/certs
        extractFrom:
          cookies:
            - hubble-ui-access-token
  authorization:
    defaultAction: Deny
    rules:
      - action: Allow
        name: allow-by-email
        principal:
          jwt:
            provider: keycloak
            claims:
              - name: email
                values:
                  - georgi.panov@darkfellanetwork.com
